# course-api-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
migrations/: 01_init.sql
src/: config.rs  lib.rs  main.rs
src/db/: courses.rs  enrolments.rs  instructors.rs  mod.rs  students.rs
src/entities/: courses.rs  enrollments.rs  instructors.rs  mod.rs  repository.rs  students.rs
src/routes/: courses.rs  enrollments.rs  instructors.rs  mod.rs  students.rs
